# voting_simulation

./: Cargo.toml  README.md  paper.tex
images/bimodal/: frame_of_reference.json  honest_coaf.json  honest_non_coaf.json  ratio_0.25_coaf.json  ratio_0.25_non_coaf.json  ratio_0.50_coaf.json  ratio_0.50_non_coaf.json  ratio_0.75_coaf.json  ratio_0.75_non_coaf.json  strategic_coaf.json  strategic_non_coaf.json
images/bimodal_ppo/: frame_of_reference.json  honest_coaf.json  honest_non_coaf.json  ratio_0.25_coaf.json  ratio_0.25_non_coaf.json  ratio_0.50_coaf.json  ratio_0.50_non_coaf.json  ratio_0.75_coaf.json  ratio_0.75_non_coaf.json  strategic_coaf.json  strategic_non_coaf.json
images/bimodal_rpo/: frame_of_reference.json  honest_coaf.json  honest_non_coaf.json  ratio_0.25_coaf.json  ratio_0.25_non_coaf.json  ratio_0.50_coaf.json  ratio_0.50_non_coaf.json  ratio_0.75_coaf.json  ratio_0.75_non_coaf.json  strategic_coaf.json  strategic_non_coaf.json
images/bimodal_scaled/: frame_of_reference.json  honest_coaf.json  honest_non_coaf.json  ratio_0.25_coaf.json  ratio_0.25_non_coaf.json  ratio_0.50_coaf.json  ratio_0.50_non_coaf.json  ratio_0.75_coaf.json  ratio_0.75_non_coaf.json  strategic_coaf.json  strategic_non_coaf.json
images/bimodal_scaled_ppo/: frame_of_reference.json  honest_coaf.json  honest_non_coaf.json  ratio_0.25_coaf.json  ratio_0.25_non_coaf.json  ratio_0.50_coaf.json  ratio_0.50_non_coaf.json  (+4 more)
paper/: paper.aux  paper.bbl  paper.bib  paper.blg  paper.out  paper.tex
src/: boxplot.rs  distr.rs  main.rs  quartiles.rs  utility_map.rs  voting_strategy.rs
(+341 files in other folders)
