[package]
name = "range_voting"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.1"
rand_distr = "0.5.1"
ordered-float = "5.0.0"
plotters = "0.3.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
plotters-backend = "0.3.7"

[features]
plotters = ["plotters/boxplot"]